# MeshCore

./: CMakeLists.txt
.github/workflows/: build-companion-firmwares.yml
variants/heltec_v3/: platformio.ini  target.cpp
variants/heltec_v3_zlw/: platformio.ini
